--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,13 +2,18 @@ name: flare_loading
 description: Loading widget based on a custom Flare animation, allow you to create beautiful custom loading widgets or dialogs
 version: 3.0.0
 homepage: https://github.com/jaumard/flare_loading
+publish_to: 'none'
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.7.8 <2.0.0"
+  sdk: ">=2.12.0 <4.0.0"
+  flutter: ">=2.12.0 <4.0.0"
 
 dependencies:
-  flare_flutter: ^3.0.0
+  flare_flutter:
+    git:
+      url: https://github.com/mbfakourii/Flare-Flutter.git
+      path: flare_flutter
+      ref: remove_hashValues
   flutter:
     sdk: flutter
 
